import { describe } from 'vitest';
import { fail, pass } from '../../test-utils';

describe('Declarations - Using', () => {
  pass('using (pass)', [
    { code: '{ using x = null; }', options: { next: true } },
    { code: '{ using a = 1, b = 2; }', options: { next: true } },
    { code: '{ using using = null; }', options: { next: true } },
    { code: '{ using of = null; }', options: { next: true } },
    { code: '{ using /*c*/ x = null; }', options: { next: true } },
    { code: 'using x = null', options: { next: true, sourceType: 'module' } },
    { code: 'await using x = null', options: { next: true, sourceType: 'module' } },
    { code: 'export using x = null', options: { next: true, sourceType: 'module' } },
    { code: 'export await using x = null', options: { next: true, sourceType: 'module' } },
    { code: 'async function f() { await using x = null; }', options: { next: true } },
    { code: 'function f() { using x = null; }', options: { next: true } },
    { code: 'function f() { await\nusing x = null; }', options: { next: true } },
    { code: 'function f() { using\nx = null; }', options: { next: true } },
    { code: 'function f() { using /*\n*/ x = null; }', options: { next: true } },
    { code: 'for (using x of y);', options: { next: true } },
    { code: 'for (using of y);', options: { next: true } },
    { code: 'for (using of of y);', options: { next: true } },
    { code: 'for (using x = 1;;);', options: { next: true } },
    { code: 'for (using a = 1, b = 2;;);', options: { next: true } },
    { code: 'async function f() { for (await using x of y); }', options: { next: true } },
    { code: 'async function f() { for await (using x of y); }', options: { next: true } },
    { code: 'async function f() { for await (await using x of y); }', options: { next: true } },
    { code: 'for (await using x of y);', options: { next: true, sourceType: 'module' } },
    { code: 'for await (using x of y);', options: { next: true, sourceType: 'module' } },
    { code: 'class C { static { using x = null; } }', options: { next: true } },
    { code: 'class C { static { await using x = null; } }', options: { next: true } },
    { code: 'class C { using = 1 }', options: { next: true } },
    { code: 'class C { using() {} }', options: { next: true } },
    { code: 'const using = 1', options: { next: true } },
    { code: 'using = 1', options: { next: true } },
    { code: 'using[0] = 1', options: { next: true } },
    { code: 'if (using) {}', options: { next: true } },
    { code: '() => { using x = 1 }', options: { next: true } },
    { code: 'switch (x) { case 1: using y = null; }', options: { next: true, sourceType: 'module' } },
    { code: String.raw`{ using \u0061 = null; }`, options: { next: true } },
  ]);

  fail('using (fail)', [
    { code: 'using x = null', options: { next: true } },
    { code: 'await using x = null', options: { next: true } },
    { code: 'function f() { await using x = null; }', options: { next: true } },
    { code: '{ using x; }', options: { next: true } },
    { code: '{ using { x } = y; }', options: { next: true } },
    { code: '{ using a = 1, { b } = c; }', options: { next: true } },
    { code: 'for (using x in y);', options: { next: true } },
    { code: 'for (using x = 1 in y);', options: { next: true } },
    { code: 'for (using { x } of y);', options: { next: true } },
    { code: 'async function f() { for (await using x in y); }', options: { next: true } },
    { code: 'for (await using x of y);', options: { next: true } },
    { code: '{ using let = 1; }', options: { next: true } },
    { code: '{ using await = 1; }', options: { next: true } },
    { code: 'using foo = null', options: { next: false } },
    { code: String.raw`{ \u0075sing x = null; }`, options: { next: true } },
    { code: 'if (true) using x = 1;', options: { next: true } },
  ]);
});
