// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Declarations - Using > using (fail) > { \\u0075sing x = null; } 1`] = `
"SyntaxError [1:13-1:14]: Unexpected token: 'identifier'
> 1 | { \\u0075sing x = null; }
    |              ^ Unexpected token: 'identifier'"
`;

exports[`Declarations - Using > using (fail) > { using { x } = y; } 1`] = `
"SyntaxError [1:8-1:9]: Using declaration cannot have destructuring patterns
> 1 | { using { x } = y; }
    |         ^ Using declaration cannot have destructuring patterns"
`;

exports[`Declarations - Using > using (fail) > { using a = 1, { b } = c; } 1`] = `
"SyntaxError [1:15-1:16]: Using declaration cannot have destructuring patterns
> 1 | { using a = 1, { b } = c; }
    |                ^ Using declaration cannot have destructuring patterns"
`;

exports[`Declarations - Using > using (fail) > { using await = 1; } 1`] = `
"SyntaxError [1:8-1:13]: 'await' may not be used as an identifier in this context
> 1 | { using await = 1; }
    |         ^^^^^ 'await' may not be used as an identifier in this context"
`;

exports[`Declarations - Using > using (fail) > { using let = 1; } 1`] = `
"SyntaxError [1:8-1:11]: 'A lexical declaration can't define a 'let' binding
> 1 | { using let = 1; }
    |         ^^^ 'A lexical declaration can't define a 'let' binding"
`;

exports[`Declarations - Using > using (fail) > { using x; } 1`] = `
"SyntaxError [1:9-1:10]: Using declaration must have an initializer
> 1 | { using x; }
    |          ^ Using declaration must have an initializer"
`;

exports[`Declarations - Using > using (fail) > async function f() { for (await using x in y); } 1`] = `
"SyntaxError [1:40-1:42]: Using declaration is not allowed in for-in statements
> 1 | async function f() { for (await using x in y); }
    |                                         ^^ Using declaration is not allowed in for-in statements"
`;

exports[`Declarations - Using > using (fail) > await using x = null 1`] = `
"SyntaxError [1:0-1:5]: 'await using' is only allowed inside async functions and at the top level of modules
> 1 | await using x = null
    | ^^^^^ 'await using' is only allowed inside async functions and at the top level of modules"
`;

exports[`Declarations - Using > using (fail) > for (await using x of y); 1`] = `
"SyntaxError [1:5-1:10]: 'await using' is only allowed inside async functions and at the top level of modules
> 1 | for (await using x of y);
    |      ^^^^^ 'await using' is only allowed inside async functions and at the top level of modules"
`;

exports[`Declarations - Using > using (fail) > for (using { x } of y); 1`] = `
"SyntaxError [1:11-1:12]: Using declaration cannot have destructuring patterns
> 1 | for (using { x } of y);
    |            ^ Using declaration cannot have destructuring patterns"
`;

exports[`Declarations - Using > using (fail) > for (using x = 1 in y); 1`] = `
"SyntaxError [1:17-1:19]: Using declaration is not allowed in for-in statements
> 1 | for (using x = 1 in y);
    |                  ^^ Using declaration is not allowed in for-in statements"
`;

exports[`Declarations - Using > using (fail) > for (using x in y); 1`] = `
"SyntaxError [1:13-1:15]: Using declaration is not allowed in for-in statements
> 1 | for (using x in y);
    |              ^^ Using declaration is not allowed in for-in statements"
`;

exports[`Declarations - Using > using (fail) > function f() { await using x = null; } 1`] = `
"SyntaxError [1:15-1:20]: 'await using' is only allowed inside async functions and at the top level of modules
> 1 | function f() { await using x = null; }
    |                ^^^^^ 'await using' is only allowed inside async functions and at the top level of modules"
`;

exports[`Declarations - Using > using (fail) > if (true) using x = 1; 1`] = `
"SyntaxError [1:16-1:17]: Unexpected token: 'identifier'
> 1 | if (true) using x = 1;
    |                 ^ Unexpected token: 'identifier'"
`;

exports[`Declarations - Using > using (fail) > using foo = null 1`] = `
"SyntaxError [1:6-1:9]: Unexpected token: 'identifier'
> 1 | using foo = null
    |       ^^^ Unexpected token: 'identifier'"
`;

exports[`Declarations - Using > using (fail) > using x = null 1`] = `
"SyntaxError [1:0-1:5]: Using declaration is not allowed in the global scope
> 1 | using x = null
    | ^^^^^ Using declaration is not allowed in the global scope"
`;

exports[`Declarations - Using > using (pass) > () => { using x = 1 } 1`] = `
{
  "body": [
    {
      "expression": {
        "async": false,
        "body": {
          "body": [
            {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": {
                    "type": "Literal",
                    "value": 1,
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "using",
              "type": "VariableDeclaration",
            },
          ],
          "type": "BlockStatement",
        },
        "expression": false,
        "generator": false,
        "params": [],
        "type": "ArrowFunctionExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > { using /*c*/ x = null; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "x",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": null,
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > { using \\u0061 = null; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "a",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": null,
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > { using a = 1, b = 2; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "a",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": 1,
              },
              "type": "VariableDeclarator",
            },
            {
              "id": {
                "name": "b",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": 2,
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > { using of = null; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "of",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": null,
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > { using using = null; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "using",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": null,
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > { using x = null; } 1`] = `
{
  "body": [
    {
      "body": [
        {
          "declarations": [
            {
              "id": {
                "name": "x",
                "type": "Identifier",
              },
              "init": {
                "type": "Literal",
                "value": null,
              },
              "type": "VariableDeclarator",
            },
          ],
          "kind": "using",
          "type": "VariableDeclaration",
        },
      ],
      "type": "BlockStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > async function f() { await using x = null; } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "name": "x",
                  "type": "Identifier",
                },
                "init": {
                  "type": "Literal",
                  "value": null,
                },
                "type": "VariableDeclarator",
              },
            ],
            "kind": "await using",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > async function f() { for (await using x of y); } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "await": false,
            "body": {
              "type": "EmptyStatement",
            },
            "left": {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": null,
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "await using",
              "type": "VariableDeclaration",
            },
            "right": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "ForOfStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > async function f() { for await (await using x of y); } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "await": true,
            "body": {
              "type": "EmptyStatement",
            },
            "left": {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": null,
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "await using",
              "type": "VariableDeclaration",
            },
            "right": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "ForOfStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > async function f() { for await (using x of y); } 1`] = `
{
  "body": [
    {
      "async": true,
      "body": {
        "body": [
          {
            "await": true,
            "body": {
              "type": "EmptyStatement",
            },
            "left": {
              "declarations": [
                {
                  "id": {
                    "name": "x",
                    "type": "Identifier",
                  },
                  "init": null,
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "using",
              "type": "VariableDeclaration",
            },
            "right": {
              "name": "y",
              "type": "Identifier",
            },
            "type": "ForOfStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > await using x = null 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "x",
            "type": "Identifier",
          },
          "init": {
            "type": "Literal",
            "value": null,
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "await using",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > class C { static { await using x = null; } } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "body": [
              {
                "declarations": [
                  {
                    "id": {
                      "name": "x",
                      "type": "Identifier",
                    },
                    "init": {
                      "type": "Literal",
                      "value": null,
                    },
                    "type": "VariableDeclarator",
                  },
                ],
                "kind": "await using",
                "type": "VariableDeclaration",
              },
            ],
            "type": "StaticBlock",
          },
        ],
        "type": "ClassBody",
      },
      "decorators": [],
      "id": {
        "name": "C",
        "type": "Identifier",
      },
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > class C { static { using x = null; } } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "body": [
              {
                "declarations": [
                  {
                    "id": {
                      "name": "x",
                      "type": "Identifier",
                    },
                    "init": {
                      "type": "Literal",
                      "value": null,
                    },
                    "type": "VariableDeclarator",
                  },
                ],
                "kind": "using",
                "type": "VariableDeclaration",
              },
            ],
            "type": "StaticBlock",
          },
        ],
        "type": "ClassBody",
      },
      "decorators": [],
      "id": {
        "name": "C",
        "type": "Identifier",
      },
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > class C { using = 1 } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "key": {
              "name": "using",
              "type": "Identifier",
            },
            "static": false,
            "type": "PropertyDefinition",
            "value": {
              "type": "Literal",
              "value": 1,
            },
          },
        ],
        "type": "ClassBody",
      },
      "decorators": [],
      "id": {
        "name": "C",
        "type": "Identifier",
      },
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > class C { using() {} } 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "computed": false,
            "decorators": [],
            "key": {
              "name": "using",
              "type": "Identifier",
            },
            "kind": "method",
            "static": false,
            "type": "MethodDefinition",
            "value": {
              "async": false,
              "body": {
                "body": [],
                "type": "BlockStatement",
              },
              "generator": false,
              "id": null,
              "params": [],
              "type": "FunctionExpression",
            },
          },
        ],
        "type": "ClassBody",
      },
      "decorators": [],
      "id": {
        "name": "C",
        "type": "Identifier",
      },
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > const using = 1 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "using",
            "type": "Identifier",
          },
          "init": {
            "type": "Literal",
            "value": 1,
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "const",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > export await using x = null 1`] = `
{
  "body": [
    {
      "attributes": [],
      "declaration": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": {
              "type": "Literal",
              "value": null,
            },
            "type": "VariableDeclarator",
          },
        ],
        "kind": "await using",
        "type": "VariableDeclaration",
      },
      "source": null,
      "specifiers": [],
      "type": "ExportNamedDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > export using x = null 1`] = `
{
  "body": [
    {
      "attributes": [],
      "declaration": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": {
              "type": "Literal",
              "value": null,
            },
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "source": null,
      "specifiers": [],
      "type": "ExportNamedDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > for (await using x of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "await using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > for (using a = 1, b = 2;;); 1`] = `
{
  "body": [
    {
      "body": {
        "type": "EmptyStatement",
      },
      "init": {
        "declarations": [
          {
            "id": {
              "name": "a",
              "type": "Identifier",
            },
            "init": {
              "type": "Literal",
              "value": 1,
            },
            "type": "VariableDeclarator",
          },
          {
            "id": {
              "name": "b",
              "type": "Identifier",
            },
            "init": {
              "type": "Literal",
              "value": 2,
            },
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "test": null,
      "type": "ForStatement",
      "update": null,
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > for (using of of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "of",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > for (using of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "name": "using",
        "type": "Identifier",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > for (using x = 1;;); 1`] = `
{
  "body": [
    {
      "body": {
        "type": "EmptyStatement",
      },
      "init": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": {
              "type": "Literal",
              "value": 1,
            },
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "test": null,
      "type": "ForStatement",
      "update": null,
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > for (using x of y); 1`] = `
{
  "body": [
    {
      "await": false,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > for await (using x of y); 1`] = `
{
  "body": [
    {
      "await": true,
      "body": {
        "type": "EmptyStatement",
      },
      "left": {
        "declarations": [
          {
            "id": {
              "name": "x",
              "type": "Identifier",
            },
            "init": null,
            "type": "VariableDeclarator",
          },
        ],
        "kind": "using",
        "type": "VariableDeclaration",
      },
      "right": {
        "name": "y",
        "type": "Identifier",
      },
      "type": "ForOfStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > function f() { await
using x = null; } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "expression": {
              "name": "await",
              "type": "Identifier",
            },
            "type": "ExpressionStatement",
          },
          {
            "declarations": [
              {
                "id": {
                  "name": "x",
                  "type": "Identifier",
                },
                "init": {
                  "type": "Literal",
                  "value": null,
                },
                "type": "VariableDeclarator",
              },
            ],
            "kind": "using",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > function f() { using
x = null; } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "expression": {
              "name": "using",
              "type": "Identifier",
            },
            "type": "ExpressionStatement",
          },
          {
            "expression": {
              "left": {
                "name": "x",
                "type": "Identifier",
              },
              "operator": "=",
              "right": {
                "type": "Literal",
                "value": null,
              },
              "type": "AssignmentExpression",
            },
            "type": "ExpressionStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > function f() { using /*
*/ x = null; } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "expression": {
              "name": "using",
              "type": "Identifier",
            },
            "type": "ExpressionStatement",
          },
          {
            "expression": {
              "left": {
                "name": "x",
                "type": "Identifier",
              },
              "operator": "=",
              "right": {
                "type": "Literal",
                "value": null,
              },
              "type": "AssignmentExpression",
            },
            "type": "ExpressionStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > function f() { using x = null; } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "name": "x",
                  "type": "Identifier",
                },
                "init": {
                  "type": "Literal",
                  "value": null,
                },
                "type": "VariableDeclarator",
              },
            ],
            "kind": "using",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > if (using) {} 1`] = `
{
  "body": [
    {
      "alternate": null,
      "consequent": {
        "body": [],
        "type": "BlockStatement",
      },
      "test": {
        "name": "using",
        "type": "Identifier",
      },
      "type": "IfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > switch (x) { case 1: using y = null; } 1`] = `
{
  "body": [
    {
      "cases": [
        {
          "consequent": [
            {
              "declarations": [
                {
                  "id": {
                    "name": "y",
                    "type": "Identifier",
                  },
                  "init": {
                    "type": "Literal",
                    "value": null,
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "using",
              "type": "VariableDeclaration",
            },
          ],
          "test": {
            "type": "Literal",
            "value": 1,
          },
          "type": "SwitchCase",
        },
      ],
      "discriminant": {
        "name": "x",
        "type": "Identifier",
      },
      "type": "SwitchStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > using = 1 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "using",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "type": "Literal",
          "value": 1,
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > using x = null 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "x",
            "type": "Identifier",
          },
          "init": {
            "type": "Literal",
            "value": null,
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "using",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Declarations - Using > using (pass) > using[0] = 1 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "computed": true,
          "object": {
            "name": "using",
            "type": "Identifier",
          },
          "optional": false,
          "property": {
            "type": "Literal",
            "value": 0,
          },
          "type": "MemberExpression",
        },
        "operator": "=",
        "right": {
          "type": "Literal",
          "value": 1,
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;
